    certificate file to verify against. Verification is only supported if you
    provide a certificate with setSSLCert(). HTTP libraries that do not support
    SSL (ie., native sockets) will throw a SagException if you call an SSL
    function.

  * You can now tell getAllDocs() to sort in descending order. Thanks to cygal
    (github/cygal) for the patch and pull request. (closes #31)

Version 0.6.1
-------------

Fixed Bugs

  * Fixed a typo bug where I was trying to throw the concept of an Exception
    instead of an instantiation. Luckily it is rare for this corner case in the
    code to run. Thanks to Oliver Kurowski (github/a4mc) for reporting.
    (closes #26)

  * Fixed a problem with the HTTP/1.1 decoding of chunked message bodies that
    was causing continuous change feed requests (/db/_changes?continuous=true)
    to fail. (closes #27)

  * Fixed a typo bug in examples/phpSessions, changed createdOn to createdAt.
    Thanks to Yo-Han (github/yo-han) for finding the bug and submitting the
    patch as a pull request. (closes #28)

Version 0.6.0
-------------

Breaking Changes

  * The HTTP status was incorrectly being added to the root of the response
    object in addition to where it belongs in `$resp->headers->_HTTP->status`.
    It is now removed. Applications that were using it at the `$resp->status`
    should fix their code to use the proper location.

New Features

  * Sag's internals now use HTTP/1.1 instead of HTTP/1.0. This requires zero
    code changes for your application because Sag's interface is not impacted
    by this.

  * You can now set cookies that will be sent with every request using
    setCookie(), and retrieve them with getCookie().

  * SagUserUtils is the first of several utility classes that will be added to
    Sag. It gently wraps the Sag interface to make managing CouchDB users much
    easier. You can create and get users, and change their password.
